--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 node_modules
 /dist
-
+src/creds
 /tests/e2e/reports/
 selenium-debug.log
 
@@ -21,3 +21,5 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+
+/live/
