--- a/package.json
+++ b/package.json
@@ -7,10 +7,27 @@
     "build": "vue-cli-service build",
     "test": "vue-cli-service test",
     "e2e": "vue-cli-service e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "graphql-api": "vue-cli-service graphql-api",
+    "run-graphql-api": "vue-cli-service run-graphql-api",
+    "prod-graphql-api": "cross-env NODE_ENV=production vue-cli-service run-graphql-api"
   },
   "dependencies": {
+    "@types/googlemaps": "^3.30.8",
+    "apollo-cache-inmemory": "^1.0.0",
+    "apollo-client": "^2.0.1",
+    "apollo-link": "^1.0.0",
+    "apollo-link-context": "^1.0.5",
+    "apollo-link-http": "^1.0.0",
+    "apollo-link-persisted-queries": "^0.1.0",
+    "apollo-link-ws": "^1.0.0",
+    "apollo-upload-client": "^7.0.0-alpha.4",
+    "apollo-utilities": "^1.0.1",
+    "graphql": "^0.13.0",
+    "material-components-web": "^0.33.0",
+    "subscriptions-transport-ws": "^0.9.5",
     "vue": "^2.5.13",
+    "vue-apollo": "^3.0.0-alpha.1",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1"
@@ -24,9 +41,12 @@
     "@vue/cli-service": "^3.0.0-beta.6",
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
+    "eslint-plugin-graphql": "^1.5.0",
+    "graphql-tag": "^2.5.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "ts-jest": "^22.0.1",
+    "vue-cli-plugin-apollo": "^0.6.1",
     "vue-template-compiler": "^2.5.13"
   },
   "browserslist": [
